--- a/.github/actions/prereqs/action.yaml
+++ b/.github/actions/prereqs/action.yaml
@@ -15,15 +15,15 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Use Node.js 16.11.1
+    - name: Use Node.js ${{ inputs.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: 16.11.1
+        node-version: ${{ inputs.node-version }}
 
-    - name: Install pnpm
+    - name: Install pnpm ${{ inputs.pnpm-version }}
       uses: pnpm/action-setup@v2.2.2
       with:
-        version: 7.11.0
+        version: ${{ inputs.pnpm-version }}
         run_install: |
           - recursive: true
             args: [--frozen-lockfile]
