--- a/packages/graphics/package.json
+++ b/packages/graphics/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "tsc": "tsc",
     "lint": "eslint . --ext .tsx",
+    "prettier": "prettier .",
     "build": "vite build",
     "preview": "vite preview"
   },
