--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -25,6 +25,7 @@ jobs:
           needs-vendored-dependencies: true
 
   deploy:
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to Render.com
