--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Frontend Checks
         uses: ./.github/actions/frontend-checks
         with:
-          package: ./packages/admin
+          package: \'./packages/admin\'
           needs-vendored-dependencies: true
 
   deploy:
