--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Frontend Checks
         uses: ./.github/actions/frontend-checks
         with:
-          package: ./packages/app
+          package: \'./packages/app\'
           needs-vendored-dependencies: false
 
   deploy:
