fix paths and vendored build chcek

--- a/.github/actions/frontend-checks/action.yaml
+++ b/.github/actions/frontend-checks/action.yaml
@@ -7,17 +7,19 @@ description:
 inputs:
   package:
     required: true
+    type: string
     description: Package filter to use for running the checks.
-  needs-vendored-dependencies:
+  needs_vendored_dependencies:
     required: false
     default: false
+    type: boolean
     description: Whether vendored dependencies need to be compiled before running the checks.
 
 runs:
   using: composite
   steps:
     - name: Compile vendored dependencies
-      if: ${{ inputs.needs-vendored-dependencies == true }}
+      if: ${{ inputs.needs_vendored_dependencies }}
       shell: bash
       run: |
         cd vendored/obs-websocket-js && npm run build
