--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "tsc": "tsc",
     "lint": "eslint . --ext .tsx",
+    "prettier": "prettier . --check --ignore-path ../../.prettierignore",
     "preview": "vite preview"
   },
   "devDependencies": {
