--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -3,8 +3,10 @@ name: Spyrothon App
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+    paths:
+      - "packages/app/**"
+      - "packages/api/**"
+      - "packages/uikit/**"
 
 jobs:
   build:
