--- a/.github/workflows/graphics.yaml
+++ b/.github/workflows/graphics.yaml
@@ -3,8 +3,10 @@ name: Spyrothon Graphics
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+    paths:
+      - "packages/graphics/**"
+      - "packages/api/**"
+      - "packages/uikit/**"
 
 jobs:
   build:
