use tracking deploy hook

--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -32,3 +32,4 @@ jobs:
     uses: ./.github/workflows/deploy-on-render.yaml
     with:
       deploy_hook: ${{ secrets.ADMIN_DEPLOY_HOOK }}
+      service_name: admin
