--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -31,3 +31,4 @@ jobs:
     uses: ./.github/workflows/deploy-on-render.yaml
     with:
       deploy_hook: ${{ secrets.APP_DEPLOY_HOOK }}
+      service_name: app
