--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -31,5 +31,6 @@ jobs:
     needs: build
     uses: ./.github/workflows/deploy-on-render.yaml
     with:
-      deploy_hook: ${{ secrets.ADMIN_DEPLOY_HOOK }}
       service_name: admin
+    secrets:
+      deploy_hook: ${{ secrets.ADMIN_DEPLOY_HOOK }}
