--- a/.github/workflows/deploy-on-render.yaml
+++ b/.github/workflows/deploy-on-render.yaml
@@ -1,21 +1,20 @@
-deploname: Deploy on Render.com
+name: Deploy on Render.com
 
 on:
   workflow_call:
     inputs:
-      deploy_hook:
+      service_name:
         required: true
         type: string
-      service_name:
-        require: true
-        type: string
+    secrets:
+      deploy_hook:
+        required: true
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy `${{ inputs.service_name }}` to Render.com
-        uses: ungnome/render-service-deploy@6cae7802c0367cfb0fa7848e18745ba675b35aef
+      - name: Deploy to Render.com
+        uses: techeca/render-deployHook-action@0.1.0
         with:
-          webhook: ${{ inputs.deploy_hook }}
-          api-key: ${{ secrets.RENDER_API_KEY }}
+          deploy-hook: ${{ secrets.deploy_hook }}
