--- a/.github/workflows/graphics.yaml
+++ b/.github/workflows/graphics.yaml
@@ -30,5 +30,6 @@ jobs:
     needs: build
     uses: ./.github/workflows/deploy-on-render.yaml
     with:
-      deploy_hook: ${{ secrets.GRAPHICS_DEPLOY_HOOK }}
       service_name: graphics
+    secrets:
+      deploy_hook: ${{ secrets.GRAPHICS_DEPLOY_HOOK }}
