--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -9,6 +9,10 @@ on:
       - "packages/uikit/**"
       - "vendored/**"
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
