--- a/.github/workflows/deploy-on-render.yaml
+++ b/.github/workflows/deploy-on-render.yaml
@@ -10,6 +10,10 @@ on:
       deploy_hook:
         required: true
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
