--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -5,6 +5,9 @@ on:
     branches: [main]
     paths:
       - "spyrothon_api/**"
+  pull_request:
+    paths:
+      - "spyrothon_api/**"
 
 concurrency:
   group: ${{ github.ref }}
@@ -58,9 +61,10 @@ jobs:
           path: /graphics_api.tar.gz
 
   deploy_production:
+    runs-on: ubuntu-20.04
     name: Deploy to Production
     needs: build
-    runs-on: ubuntu-20.04
+    if: github.ref == 'main'
     environment: production
     steps:
       - name: Download release artifact
