--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -37,6 +37,7 @@ jobs:
 
   deploy:
     needs: build
+    if: github.ref == 'main'
     uses: ./.github/workflows/deploy-on-render.yaml
     with:
       service_name: app
