--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -10,7 +10,7 @@ on:
       - "spyrothon_api/**"
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 defaults:
