--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -16,7 +16,7 @@ on:
       - "vendored/**"
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
