--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -14,7 +14,7 @@ on:
       - "packages/uikit/**"
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
