--- a/.github/workflows/deploy-on-render.yaml
+++ b/.github/workflows/deploy-on-render.yaml
@@ -11,7 +11,7 @@ on:
         required: true
 
 concurrency:
-  group: ${{ github.ref }}-${{ inputs.service_name }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}-${{ inputs.service_name }}
   cancel-in-progress: true
 
 jobs:
