--- a/spyrothon_admin/tsconfig.json
+++ b/spyrothon_admin/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "paths": {
       "@admin/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*", "../../@types/*"],
+  "include": ["./src/**/*", "../@types/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
