maybe fix deploy step

--- a/.github/workflows/deploy-on-render.yaml
+++ b/.github/workflows/deploy-on-render.yaml
@@ -17,6 +17,7 @@ concurrency:
 jobs:
   deploy:
     name: Deploy to Production
+    if: github.ref == 'main'
     environment: production
     runs-on: ubuntu-latest
     steps:
