--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -39,6 +39,7 @@ jobs:
 
   deploy:
     needs: build
+    if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/deploy-on-render.yaml
     with:
       service_name: admin
