--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -64,6 +64,7 @@ jobs:
     runs-on: ubuntu-20.04
     name: Deploy to Production
     needs: build
+    if: github.ref == 'refs/heads/main'
     environment: production
     steps:
       - name: Download release artifact
