--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [main]
     paths:
-      - "packages/app/**"
+      - "spyrothon_app/**"
       - "packages/api/**"
       - "packages/uikit/**"
   pull_request:
     paths:
-      - "packages/app/**"
+      - "spyrothon_app/**"
       - "packages/api/**"
       - "packages/uikit/**"
 
@@ -32,7 +32,7 @@ jobs:
       - name: Frontend Checks
         uses: ./.github/actions/frontend-checks
         with:
-          package: ./packages/app
+          package: ./spyrothon_app
           needs_vendored_dependencies: false
 
   deploy:
