--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,102 @@
     }
   },
   "rules": {
-    "camelcase": ["error", { "allow": ["^_"] }],
+    "camelcase": "off",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "default",
+        "format": ["camelCase"]
+      },
+      // This and the next one allow properties like 'Content-Type'
+      {
+        "selector": "property",
+        "format": ["camelCase"],
+        "filter": {
+          "regex": "[- ]",
+          "match": false
+        }
+      },
+      {
+        "selector": "property",
+        "format": null,
+        "filter": {
+          "regex": "[- ]",
+          "match": true
+        },
+        "modifiers": ["requiresQuotes"]
+      },
+      // Allow functions to be imperativeLike or ComponentLike.
+      // Non-exported functions can have underscores, but public ones must not.
+      {
+        "selector": "function",
+        "modifiers": ["exported"],
+        "format": ["camelCase", "PascalCase"],
+        "leadingUnderscore": "forbid"
+      },
+      {
+        "selector": "function",
+        "format": ["camelCase", "PascalCase"],
+        "leadingUnderscore": "allow"
+      },
+      // Variables can be normalLike, CONSTANT_LIKE, or TypeLike.
+      {
+        "selector": "variable",
+        "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+      },
+      // Some object literals like CSS variables and internal fields are prefixed with -- and __.
+      {
+        "selector": "objectLiteralProperty",
+        "format": null,
+        "filter": {
+          "regex": "^--|__",
+          "match": true
+        }
+      },
+      // Object literals can basically be anything depending on usage.
+      {
+        "selector": "objectLiteralProperty",
+        "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+      },
+      {
+        "selector": "objectLiteralMethod",
+        "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+      },
+      // Enums are always like Constants
+      {
+        "selector": "enumMember",
+        "format": ["PascalCase", "UPPER_CASE"]
+      },
+      // Unused variables should have a leading underscore, but destructured properties are fine to leave without.
+      {
+        "selector": "variable",
+        "format": ["camelCase"],
+        "modifiers": ["unused", "destructured"],
+        "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "variable",
+        "format": ["camelCase"],
+        "modifiers": ["unused"],
+        "leadingUnderscore": "require"
+      },
+      {
+        "selector": "parameter",
+        "format": ["camelCase"],
+        "leadingUnderscore": "allow"
+      },
+      // Private members _can_ have an underscore, but don't need it.
+      {
+        "selector": "memberLike",
+        "modifiers": ["private"],
+        "format": ["camelCase"],
+        "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "typeLike",
+        "format": ["PascalCase"]
+      }
+    ],
     "no-labels": ["error", { "allowLoop": true }],
     // TypeScript-replaced rules
     "no-unused-vars": "off",
