initial bot setup and loading services from Render
The Open API spec kinda sucks and is really annoying to work with because the typing is way too lax, plus it doesn't let you discriminate the union
based on response status. So we have to just _assume_ it'll be a 200...(which it will, because the generated client throws on anything >=400, so the
other codes can't even happen here...)

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,10 @@
 packages:
+  - "sprobothon"
   - "spyrothon_admin"
   - "spyrothon_app"
   - "spyrothon_graphics"
   - "packages/api"
   - "packages/uikit"
+
+  # Vendored stuff
+  - "packages/render-api"
