--- a/sprobothon/package.json
+++ b/sprobothon/package.json
@@ -15,6 +15,7 @@
     "api": "^4.5.2",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
+    "octokit": "^2.0.7",
     "render-api": "workspace:*",
     "winston": "^3.8.2"
   },
