--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -8,6 +8,7 @@ on:
   pull_request:
     paths:
       - "spyrothon_api/**"
+  workflow_dispatch: {}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -64,8 +65,6 @@ jobs:
     runs-on: ubuntu-20.04
     name: Deploy to Production
     needs: build
-    if: github.ref == 'refs/heads/main'
-    environment: production
     steps:
       - name: Download release artifact
         uses: actions/download-artifact@v3
