--- a/sprobothon/package.json
+++ b/sprobothon/package.json
@@ -17,10 +17,8 @@
     "dotenv": "^16.0.3",
     "octokit": "^2.0.7",
     "render-api": "workspace:*",
-    "winston": "^3.8.2"
-  },
-  "devDependencies": {
-    "typescript": "^4.6.4",
+    "winston": "^3.8.2",
+    "typescript": "^4.8.4",
     "vite-node": "^0.23.4"
   }
 }
