--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -1,13 +1,6 @@
 name: Spyrothon API
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - "spyrothon_api/**"
-  pull_request:
-    paths:
-      - "spyrothon_api/**"
   workflow_dispatch: {}
 
 concurrency:
@@ -65,6 +58,7 @@ jobs:
     runs-on: ubuntu-20.04
     name: Deploy to Production
     needs: build
+    environment: production
     steps:
       - name: Download release artifact
         uses: actions/download-artifact@v3
