only one api deploy can happen at a time

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -11,7 +11,7 @@ on:
 run-name: ${{ inputs.trigger_id }}
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  group: ${{ github.workflow }}
   cancel-in-progress: true
 
 defaults:
