--- a/sprobothon/package.json
+++ b/sprobothon/package.json
@@ -7,18 +7,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite-node ./src/index.tsx",
-    "update-commands": "vite-node ./src/deploy.tsx",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "update-commands": "vite-node ./src/deploy.tsx"
   },
   "dependencies": {
+    "@spyrothon/api": "workspace:^1.0.0",
     "api": "^4.5.2",
+    "cac": "^6.7.14",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
     "octokit": "^2.0.7",
     "render-api": "workspace:*",
-    "winston": "^3.8.2",
     "typescript": "^4.8.4",
-    "vite-node": "^0.23.4"
+    "vite-node": "^0.23.4",
+    "winston": "^3.8.2"
   }
 }
