[worfklow][api] move api artifacts to opt dir

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -80,7 +80,7 @@ jobs:
           username: ${{ secrets.DEPLOYMENT_USERNAME }}
           key: ${{ secrets.DEPLOYMENT_SSH_KEY }}
           source: ./${{ github.sha }}
-          target: artifacts/graphics_api/
+          target: /opt/graphics_api/artifacts/
           overwrite: true
 
       - name: Deploy new release
