--- a/.eslintrc
+++ b/.eslintrc
@@ -115,6 +115,8 @@
       }
     ],
     "no-labels": ["error", { "allowLoop": true }],
+    // Don't care about this one here
+    "react/no-unescaped-entities": "off",
     // TypeScript-replaced rules
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
