--- a/spyrothon_admin/package.json
+++ b/spyrothon_admin/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@spyrothon/api": "workspace:*",
-    "@spyrothon/sparx": "^0.1.2",
+    "@spyrothon/sparx": "link:../../sparx-design/packages/sparx",
     "@spyrothon/uikit": "workspace:*",
     "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
