--- a/spyrothon_app/package.json
+++ b/spyrothon_app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@spyrothon/api": "workspace:*",
+    "@spyrothon/sparx": "link:../../sparx-design/packages/sparx",
     "@spyrothon/uikit": "workspace:*",
     "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
