--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -6,12 +6,12 @@ on:
     paths:
       - "spyrothon_app/**"
       - "packages/api/**"
-      - "packages/uikit/**"
+      - "packages/utils/**"
   pull_request:
     paths:
       - "spyrothon_app/**"
       - "packages/api/**"
-      - "packages/uikit/**"
+      - "packages/utils/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
