--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@spyrothon/uikit",
+  "name": "@spyrothon/utils",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": "./src/index.tsx",
-      "require": "./src/index.tsx"
+      "import": "./index.tsx",
+      "require": "./index.tsx"
     }
   },
   "scripts": {
@@ -21,21 +21,9 @@
     "build": "vite build && pnpm types",
     "preview": "vite preview"
   },
-  "peerDependencies": {
-    "react": "16.8 - 18",
-    "react-dom": "16.8 - 18",
-    "react-router-dom": "6.3.0"
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "react-datepicker": "^4.8.0",
-    "react-feather": "^2.0.10"
-  },
   "devDependencies": {
     "@types/react": "^18.0.17",
-    "@types/react-datepicker": "^4.4.2",
     "@vitejs/plugin-react": "^2.1.0",
-    "eslint": "^8.23.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
