--- a/spyrothon_admin/package.json
+++ b/spyrothon_admin/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@spyrothon/api": "workspace:*",
     "@spyrothon/sparx": "link:../../sparx-design/packages/sparx",
-    "@spyrothon/uikit": "workspace:*",
+    "@spyrothon/utils": "workspace:*",
     "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
     "luxon": "^3.0.3",
