--- a/spyrothon_graphics/package.json
+++ b/spyrothon_graphics/package.json
@@ -24,7 +24,8 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
-    "sturdy-websocket": "^0.2.1"
+    "sturdy-websocket": "^0.2.1",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/luxon": "^3.0.1",
