Use split participant table to start building Popout/Modalized editors (#17)
Previously, editing runners/commentators/interview people meant having a
bunch of fields pre-existing on the run editor screen. That was gross,
took up a lot of space, and was just hard to read.

Now that things are split into Participants and individualized record
types, it's a lot easier to move the special information into Layered
content with a Popout for editing runner information and a Modal for
creating new participants.

Compare:
| Old | New |
| --- | --- |
| <img width="982" alt="image"
src="https://user-images.githubusercontent.com/783733/198875527-30e9c656-9b9d-4641-9061-2150e4a58d53.png"/>
| <img width="759" alt="image"
src="https://user-images.githubusercontent.com/783733/198875500-a08932b6-1db0-4e2b-9f13-b5f3d4933f2c.png"/>
|


Still more work to do to get commentators/interview participants moved
to this system. Then `graphics` needs to be updated to use the new
hierarchy as well. Currently it's broken.

--- a/spyrothon_admin/package.json
+++ b/spyrothon_admin/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "@spyrothon/api": "workspace:*",
-    "@spyrothon/sparx": "^0.2.2",
+    "@spyrothon/sparx": "0.2.3",
     "@spyrothon/utils": "workspace:*",
     "classnames": "^2.3.1",
+    "jotai": "^1.9.0",
     "js-cookie": "^3.0.1",
     "luxon": "^3.0.3",
     "obs-websocket-js": "5.0.2",
